# CaffeCxxUsage

./: CMakeLists.txt
3rdParties/caffe/include/caffe/: blob.hpp  caffe.hpp  common.hpp  data_reader.hpp  data_transformer.hpp  fast_rcnn_layers.hpp  filler.hpp  internal_thread.hpp  layer.hpp  layer_factory.hpp  net.hpp  parallel.hpp  sgd_solvers.hpp  solver.hpp  solver_factory.hpp  syncedmem.hpp
3rdParties/caffe/include/caffe/layers/: cudnn_relu_layer.hpp  cudnn_sigmoid_layer.hpp  cudnn_tanh_layer.hpp  data_layer.hpp  loss_layer.hpp  lstm_layer.hpp  parameter_layer.hpp  recurrent_layer.hpp  rnn_layer.hpp  softmax_loss_layer.hpp
3rdParties/caffe/include/caffe/util/: benchmark.hpp  hdf5.hpp  io.hpp  math_functions.hpp  nms.hpp  upgrade_proto.hpp
executable/: CMakeLists.txt  main.cpp
res/models/traffic_sign_binary_model/: deploy.prototxt  mean.binaryproto  solver.prototxt
src/: CMakeLists.txt
src/classification/: CMakeLists.txt  Classifier.cpp  Classifier.h
src/myfUtils/: BasicVariableOperation.cpp  BasicVariableOperation.h  CMakeLists.txt  FileOperator.cpp  FileOperator.h  Lbp.cpp  Lbp.h  LiveQueue.cpp  LiveQueue.h  MatOperation.cpp  MatOperation.h  Morph.cpp  Morph.h  RectangleOperation.cpp  RectangleOperation.h
